# spaceport-2023

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cmake_install.cmake  fs-dump  fs-symbols  how_to_set_up.md  nofs-symbols  obc.hex  obc.uf2  offload.py  test.py
esp-idf/components/bt/host/nimble/nimble/: NOTICE  RELEASE_NOTES.md  repository.yml
esp-idf/components/bt/host/nimble/nimble/nimble/host/mesh/src/: crypto.c  net.c
esp-idf/components/bt/host/nimble/nimble/nimble/host/src/: ble_gap.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_mbuf.c  ble_l2cap_sig_cmd.c  ble_sm.c  ble_sm_cmd.c
esp-idf/components/bt/host/nimble/nimble/nimble/transport/emspi/src/: ble_hci_emspi.c
esp-idf/components/bt/host/nimble/nimble/porting/nimble/include/logcfg/: logcfg.h
esp-idf/components/bt/host/nimble/nimble/porting/nimble/include/mem/: mem.h
esp-idf/components/bt/host/nimble/nimble/porting/nimble/include/os/: os_mempool.h
esp-idf/components/bt/host/nimble/nimble/porting/nimble/include/syscfg/: syscfg.h
esp-idf/components/bt/host/nimble/nimble/porting/nimble/src/: os_mempool.c  os_msys_init.c
esp-idf/components/bt/host/nimble/nimble/porting/npl/freertos/include/nimble/: nimble_npl_os.h
esp-idf/components/mpu9250/: ak8963.h  i2c-easy.h  mpu9250.h
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/: .rat-excludes
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/nimble/host/include/host/: ble_gap.h
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/nimble/host/mesh/src/: adv.c  crypto.h  glue.c
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/nimble/host/src/: ble_hs.c  ble_hs_flow.c  ble_hs_hci_evt.c  ble_sm_alg.c
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/porting/nimble/include/nimble/: nimble_port.h
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/porting/nimble/include/os/: queue.h
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/porting/nimble/src/: nimble_port.c
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/porting/npl/freertos/include/nimble/: nimble_port_freertos.h
esp-idf/nessie_projects/Drivers/test/components/bt/host/nimble/nimble/porting/npl/freertos/src/: nimble_port_freertos.c  npl_os_freertos.c
esp-idf/nessie_projects/Drivers/test/main/: test.c
esp-idf/nessie_projects/Starter/main/: blink-led.c
esp-idf/payload/: CMakeLists.txt
esp-idf/payload/main/: CMakeLists.txt
main/: System.cpp  fs.cpp  main.cpp
main/device/: BME280.cpp  DS3231.cpp  ESPFlash.cpp  H3LIS100DLTR.cpp  ICM20948.cpp  Payload.cpp  W25Q128.cpp
main/device/include/: BME280.hpp  DS3231.hpp  Device.hpp  ESPFlash.hpp  H3LIS100DLTR.hpp  ICM20948.hpp  Payload.hpp  W25Q128.hpp
main/include/: System.hpp  fs.hpp  main.hpp  types.hpp
